[gd_scene load_steps=9 format=4 uid="uid://lemo73ysf3lo"]

[ext_resource type="TileSet" uid="uid://bnsia1ygro6ev" path="res://arcade_game/tilesets/tileset.tres" id="1_snsc8"]
[ext_resource type="Script" path="res://arcade_game/arcade_scene.gd" id="1_w10y0"]
[ext_resource type="Script" path="res://arcade_game/characters/enemy/enemy_holder.gd" id="3_778h3"]
[ext_resource type="Script" path="res://ui/level_clear.gd" id="5_efr2d"]
[ext_resource type="PackedScene" uid="uid://bmaikduukad0n" path="res://arcade_game/characters/enemy/enemy.tscn" id="5_liu6m"]
[ext_resource type="FontFile" uid="uid://c58kiqdiy82fw" path="res://fonts/Phased.ttf" id="6_pgdwi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_akknf"]
size = Vector2(51.5, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcwft"]
size = Vector2(31, 47)

[node name="ArcadeScene" type="Node2D"]
script = ExtResource("1_w10y0")

[node name="GroundLayer" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray("AAD+//7/AAABAAEAAAD/////AAABAAEAAAAAAP//AAABAAEAAAAAAAAAAAAFAAIAAAABAAAAAAABAAEAAAACAAEAAAABAAEAAAADAAEAAAACAAIAAAADAAIAAAABAAEAAAAEAAIAAAAEAAIAAAAFAAIAAAABAAEAAAAFAAMAAAABAAEAAAAEAAMAAAABAAEAAAADAAMAAAABAAEAAAACAAMAAAABAAEAAAABAAMAAAABAAEAAAAAAAIAAAABAAEAAAD//wIAAAABAAEAAAD+/wIAAAABAAEAAAD9/wIAAAABAAEAAAD8/wIAAAAEAAIAAAD8/wEAAAABAAEAAAD9/wAAAAABAAEAAAD+////AAABAAEAAAABAP7/AAABAAEAAAACAP7/AAABAAEAAAACAP//AAABAAEAAAD8//3/AAABAAEAAAD8//7/AAABAAEAAAD8////AAABAAEAAAD8/wAAAAABAAEAAAD8/wMAAAABAAEAAAD8/wQAAAABAAEAAAD8/wUAAAABAAEAAAD9//3/AAABAAEAAAD9//7/AAAFAAIAAAD9////AAABAAEAAAD9/wEAAAABAAEAAAD9/wMAAAABAAEAAAD9/wQAAAABAAEAAAD9/wUAAAABAAEAAAD+//3/AAAEAAIAAAD+/wAAAAABAAEAAAD+/wEAAAABAAEAAAD+/wMAAAABAAEAAAD+/wQAAAABAAEAAAD+/wUAAAABAAEAAAD///3/AAAFAAIAAAD///7/AAABAAEAAAD//wAAAAABAAEAAAD//wEAAAAFAAIAAAD//wMAAAABAAEAAAD//wQAAAABAAEAAAD//wUAAAAEAAIAAAAAAP3/AAABAAEAAAAAAP7/AAABAAEAAAAAAAEAAAABAAEAAAAAAAMAAAABAAEAAAAAAAQAAAABAAEAAAAAAAUAAAABAAEAAAABAP3/AAABAAEAAAABAP//AAABAAEAAAABAAEAAAAEAAIAAAABAAIAAAAFAAIAAAABAAQAAAABAAEAAAABAAUAAAABAAEAAAACAP3/AAABAAEAAAACAAAAAAACAAIAAAACAAIAAAAEAAIAAAACAAQAAAABAAEAAAACAAUAAAABAAEAAAADAP3/AAACAAIAAAADAP7/AAABAAEAAAADAP//AAABAAEAAAADAAAAAAABAAEAAAADAAQAAAABAAEAAAADAAUAAAAFAAIAAAAEAP3/AAABAAEAAAAEAP7/AAABAAEAAAAEAP//AAAFAAIAAAAEAAAAAAABAAEAAAAEAAEAAAABAAEAAAAEAAQAAAABAAEAAAAEAAUAAAABAAEAAAAFAP3/AAABAAEAAAAFAP7/AAABAAEAAAAFAP//AAABAAEAAAAFAAAAAAACAAIAAAAFAAEAAAAFAAIAAAAFAAQAAAABAAEAAAAFAAUAAAAFAAIAAAAGAP3/AAABAAEAAAAGAP7/AAABAAEAAAAGAP//AAABAAEAAAAGAAAAAAABAAEAAAAGAAEAAAABAAEAAAAGAAIAAAABAAEAAAAGAAMAAAABAAEAAAAGAAQAAAABAAEAAAAGAAUAAAAEAAIAAAAHAP3/AAABAAEAAAAHAP7/AAABAAEAAAAHAP//AAABAAEAAAAHAAAAAAACAAEAAAAHAAEAAAABAAEAAAAHAAIAAAABAAEAAAAHAAMAAAABAAEAAAAHAAQAAAABAAEAAAAHAAUAAAAEAAIAAAAIAP//AAABAAEAAAAIAAAAAAABAAEAAAAJAP//AAAEAAIAAAAJAAAAAAACAAEAAAAKAP//AAAFAAIAAAAKAAAAAAABAAEAAAALAP//AAAEAAIAAAALAAAAAAABAAEAAAAMAP//AAABAAEAAAAMAAAAAAAEAAIAAAANAP//AAABAAEAAAANAAAAAAABAAEAAAAOAP//AAABAAEAAAAOAAAAAAABAAEAAAAPAP//AAABAAEAAAAPAAAAAAABAAEAAAAQAP//AAABAAEAAAD8//z/AAAFAAAAAAD9//z/AAABAAAAAAD+//z/AAABAAAAAAD///z/AAABAAAAAAAAAPz/AAAFAAAAAAABAPz/AAAFAAAAAAACAPz/AAACAAAAAAADAPz/AAACAAAAAAAEAPz/AAACAAAAAAAFAPz/AAAEAAAAAAAGAPz/AAABAAAAAAAHAPz/AAACAAAAAAAIAP7/AAADAAEAAAAJAP7/AAABAAAAAAAKAP7/AAAGAAAAAAAOAP7/AAABAAAAAAAPAP7/AAAFAAAAAAAQAP7/AAACAAAAAAD8/wYAAAACAAQAAAD9/wYAAAABAAQAAAD+/wYAAAACAAQAAAD//wYAAAAFAAQAAAAAAAYAAAACAAQAAAABAAYAAAABAAQAAAACAAYAAAACAAQAAAADAAYAAAABAAQAAAAEAAYAAAACAAQAAAAFAAYAAAABAAQAAAAGAAYAAAACAAQAAAAHAAYAAAACAAQAAAD7//z/AAAAAAAAAAAIAAYAAAADAAQAAAAIAAEAAAADAAMAAAAIAAIAAAAJAAEAAAAIAAMAAAAJAAEAAAAIAAQAAAAJAAEAAAAIAAUAAAAJAAEAAAAJAAEAAAAFAAMAAAALAAEAAAACAAQAAAAMAAEAAAAEAAQAAAANAAEAAAAEAAQAAAAOAAEAAAAEAAQAAAAPAAEAAAAGAAQAAAAQAAEAAAAEAAQAAAD7//3/AAAAAAMAAAD7//7/AAAAAAIAAAD7////AAAAAAIAAAD7/wAAAAAAAAIAAAD7/wEAAAAAAAIAAAD7/wIAAAAAAAIAAAD7/wMAAAAAAAMAAAD7/wQAAAAAAAMAAAD7/wUAAAAAAAIAAAD7/wYAAAAAAAQAAAAIAPz/AAADAAAAAAAIAP3/AAAJAAIAAAALAAMAAAABAAEAAAALAAQAAAAEAAIAAAALAAUAAAAFAAMAAAAMAAMAAAABAAEAAAAMAAQAAAABAAEAAAAMAAUAAAABAAEAAAAMAAYAAAACAAQAAAANAAMAAAABAAEAAAANAAQAAAAEAAIAAAANAAUAAAABAAEAAAANAAYAAAABAAQAAAAOAAMAAAABAAEAAAAOAAQAAAABAAEAAAAOAAUAAAABAAEAAAAOAAYAAAAFAAQAAAAPAAMAAAABAAEAAAAPAAQAAAABAAEAAAAPAAUAAAABAAEAAAAPAAYAAAACAAQAAAAQAAMAAAABAAEAAAAQAAQAAAABAAEAAAAQAAUAAAACAAEAAAAQAAYAAAACAAQAAAAJAAIAAAAAAAEAAAAJAAMAAAAAAAMAAAAJAAQAAAAAAAEAAAAJAAUAAAAAAAIAAAAKAAEAAAADAAMAAAALAAIAAAACAAAAAAAMAAIAAAAFAAAAAAANAAIAAAAFAAAAAAAOAAIAAAACAAAAAAAPAAIAAAABAAAAAAAQAAIAAAABAAAAAAAKAAIAAAADAAEAAAAKAAUAAAADAAMAAAALAAYAAAAAAAQAAAARAAYAAAADAAQAAAARAAMAAAAJAAIAAAARAAQAAAAJAAMAAAARAAUAAAAJAAIAAAARAAIAAAADAAAAAAAKAAMAAAABAAEAAAAKAAQAAAABAAEAAAAJAAYAAAAAAAEAAAAJAAcAAAAAAAMAAAAJAAgAAAAAAAMAAAAJAAkAAAAAAAEAAAAKAAYAAAAJAAEAAAAKAAcAAAAJAAEAAAAKAAgAAAAJAAIAAAAKAAkAAAAJAAEAAAANAP7/AAACAAAAAAAMAP7/AAABAAEAAAALAP7/AAABAAEAAAAJAPr/AAAEAAIAAAAJAPv/AAABAAEAAAAJAPz/AAACAAEAAAAKAPr/AAABAAEAAAAKAPv/AAABAAEAAAAKAPz/AAABAAEAAAALAPr/AAABAAEAAAALAPv/AAACAAEAAAALAPz/AAABAAEAAAALAP3/AAABAAEAAAAMAPr/AAABAAEAAAAMAPv/AAABAAEAAAAMAPz/AAABAAEAAAAMAP3/AAAFAAIAAAANAPr/AAABAAEAAAANAPv/AAAFAAIAAAANAPz/AAABAAEAAAANAP3/AAABAAEAAAAOAPr/AAABAAEAAAAOAPv/AAABAAEAAAAOAPz/AAAFAAIAAAAOAP3/AAABAAEAAAAPAPr/AAABAAEAAAAPAPv/AAABAAEAAAAPAPz/AAABAAEAAAAPAP3/AAABAAEAAAAJAP3/AAABAAEAAAAKAP3/AAABAAEAAAAIAPv/AAAAAAEAAAAIAPr/AAAAAAMAAAAQAPn/AAAJAAMAAAAQAPr/AAAJAAIAAAAQAPv/AAAJAAMAAAAQAPz/AAAJAAMAAAAQAP3/AAAJAAMAAAAQAPj/AAADAAAAAAAIAPj/AAAAAAAAAAAJAPj/AAACAAAAAAAKAPj/AAAFAAAAAAALAPj/AAACAAAAAAAMAPj/AAACAAAAAAANAPj/AAAEAAAAAAAOAPj/AAABAAAAAAAPAPj/AAABAAAAAAAJAPn/AAABAAEAAAAKAPn/AAABAAEAAAALAPn/AAAEAAIAAAAMAPn/AAACAAEAAAANAPn/AAABAAEAAAAOAPn/AAABAAEAAAAPAPn/AAAEAAIAAAAIAPn/AAAAAAEAAAARAAAAAAABAAEAAAAQAAAAAAAEAAIAAAARAP//AAABAAEAAAARAP7/AAAGAAAAAAARAAEAAAACAAQAAAASAP//AAAKAAAAAAASAAAAAAAKAAIAAAASAAEAAAABAAQAAAATAAAAAAAMAAIAAAATAP//AAAMAAAAAAATAAEAAAABAAQAAAD1/xIAAAABAAEAAAD1/xMAAAABAAEAAAD1/xQAAAABAAMAAAD2/xIAAAABAAEAAAD2/xMAAAABAAIAAAD4/xMAAAAEAAIAAAD5/xMAAAABAAEAAAD//xIAAAAMAAEAAAD1/xUAAAABAAEAAAD1/xYAAAACAAEAAAD1/xcAAAACAAIAAAD2/xUAAAADAAEAAAD2/xYAAAABAAEAAAD4/xYAAAABAAEAAAD5/xYAAAABAAMAAAD1/xgAAAABAAEAAAD1/xkAAAABAAIAAAD1/xoAAAABAAMAAAD//xgAAAABAAEAAAD1/xsAAAABAAEAAAD1/xwAAAABAAIAAAD2/xsAAAABAAEAAAD2/xwAAAABAAEAAAD4/xwAAAAJAAEAAAD5/xwAAAAAAAEAAAD//xsAAAABAAEAAAAAABIAAAAFAAEAAAAAABMAAAABAAEAAAAAABQAAAAFAAMAAAABABIAAAABAAEAAAABABMAAAABAAEAAAADABMAAAABAAIAAAAAABUAAAAAAAQAAAAAABYAAAABAAAAAAAAABcAAAACAAIAAAABABUAAAABAAQAAAABABYAAAAGAAAAAAADABYAAAAFAAEAAAAAABgAAAALAAEAAAAAABkAAAALAAEAAAAAABoAAAABAAMAAAABABgAAAABAAEAAAABABkAAAABAAEAAAADABkAAAACAAEAAAAAABsAAAABAAEAAAAAABwAAAACAAEAAAABABsAAAABAAEAAAABABwAAAABAAEAAAD2/xQAAAADAAMAAAD3/xIAAAACAAEAAAD3/xMAAAACAAIAAAD6/xMAAAABAAEAAAD2/xcAAAABAAEAAAD3/xUAAAAEAAEAAAD3/xYAAAABAAEAAAD6/xYAAAALAAEAAAD3/xgAAAABAAQAAAD6/xkAAAABAAAAAAD3/xsAAAABAAEAAAD3/xwAAAABAAEAAAD6/xwAAAALAAEAAAD5/xoAAAAAAAIAAAD6/xoAAAALAAEAAAD8/xoAAAABAAEAAAD9/xoAAAABAAEAAAD3/xcAAAABAAEAAAD4/xcAAAACAAIAAAD//xYAAAABAAAAAAD//xcAAAABAAIAAAACABcAAAABAAIAAAADABcAAAALAAEAAAAJABYAAAACAAEAAAACABoAAAABAAEAAAADABoAAAABAAEAAAAJABkAAAALAAEAAAD4/xgAAAABAAQAAAD5/xgAAAABAAQAAAD6/xgAAAACAAQAAAD7/xgAAAAFAAMAAAD8/xgAAAABAAEAAAD9/xgAAAAJAAMAAAD+/xgAAAAAAAIAAAD+/xcAAAAAAAEAAAD9/xcAAAAJAAMAAAD8/xcAAAABAAEAAAD7/xYAAAABAAIAAAD5/xUAAAADAAEAAAD5/xcAAAABAAEAAAD4/xUAAAAFAAEAAAD4/xQAAAAFAAMAAAD5/xQAAAADAAMAAAD6/xIAAAABAAIAAAD7/xIAAAABAAEAAAD8/xMAAAALAAEAAAD9/xMAAAAJAAMAAAD9/xQAAAAJAAIAAAD+/xQAAAAEAAMAAAD//xQAAAAEAAMAAAACABUAAAABAAQAAAACABYAAAABAAAAAAAEABUAAAALAAEAAAAEABQAAAABAAEAAAAEABMAAAABAAMAAAACABMAAAALAAEAAAD//xMAAAAMAAIAAAD+/xMAAAAKAAIAAAD7/xMAAAABAAEAAAD9/xIAAAAJAAIAAAD+/xIAAAAKAAEAAAD8/xIAAAALAAEAAAD5/xIAAAABAAIAAAD4/xIAAAABAAEAAAACABIAAAABAAMAAAADABIAAAABAAEAAAAEABIAAAABAAEAAAAFABIAAAABAAEAAAAGABIAAAABAAEAAAAHABIAAAABAAMAAAAIABIAAAACAAIAAAAIABMAAAABAAEAAAAJABMAAAABAAIAAAAJABQAAAABAAEAAAAJABUAAAABAAEAAAAIABcAAAABAAMAAAAIABgAAAALAAEAAAAJABcAAAABAAEAAAAJABIAAAABAAEAAAAHABMAAAABAAIAAAAGABMAAAABAAEAAAAFABMAAAABAAEAAAAHABQAAAABAAIAAAAHABUAAAABAAEAAAAIABUAAAABAAEAAAAIABYAAAABAAEAAAAIABkAAAABAAMAAAAIABoAAAABAAEAAAAJABoAAAABAAEAAAAJABsAAAABAAEAAAAJABwAAAACAAEAAAAIABwAAAABAAEAAAAHABwAAAABAAEAAAAGABwAAAALAAEAAAAFABwAAAABAAEAAAAFABsAAAABAAEAAAAEABsAAAABAAIAAAACABsAAAAEAAIAAAD+/xsAAAAFAAMAAAD9/xsAAAADAAMAAAD8/xsAAAALAAEAAAD7/xsAAAABAAEAAAD6/xsAAAABAAEAAAD7/xkAAAAFAAEAAAD8/xkAAAABAAEAAAD9/xkAAAADAAEAAAD+/xkAAAAFAAEAAAD+/xoAAAABAAEAAAD3/xoAAAABAAEAAAD4/xsAAAAJAAIAAAD8/xwAAAABAAEAAAD9/xwAAAAJAAMAAAD+/xwAAAAAAAEAAAD//xwAAAACAAIAAAD7/xwAAAAEAAIAAAACABwAAAABAAEAAAAEABwAAAAEAAIAAAAEABoAAAABAAEAAAACABkAAAAEAAIAAAABABoAAAABAAEAAAACABgAAAABAAEAAAABABcAAAALAAEAAAD9/xUAAAAJAAIAAAD8/xUAAAABAAEAAAD7/xUAAAAFAAEAAAD7/xQAAAAFAAMAAAD6/xQAAAABAAQAAAD3/xQAAAABAAQAAAD6/xUAAAAEAAEAAAD6/xcAAAABAAEAAAD7/xcAAAABAAEAAAD8/xYAAAABAAEAAAD8/xQAAAABAAMAAAD7/xoAAAABAAEAAAD9/xYAAAAJAAIAAAABABQAAAACAAIAAAACABQAAAABAAEAAAADABQAAAABAAIAAAAFABQAAAABAAMAAAAGABQAAAABAAEAAAAIABQAAAABAAEAAAAGABUAAAALAAEAAAAFABUAAAABAAEAAAADABUAAAAFAAMAAAADABgAAAABAAEAAAAEABYAAAABAAEAAAAEABcAAAABAAEAAAAEABgAAAALAAEAAAAEABkAAAALAAEAAAAFABYAAAABAAEAAAAGABYAAAABAAIAAAAGABcAAAABAAEAAAAGABgAAAABAAEAAAAGABkAAAALAAEAAAAGABoAAAABAAIAAAAHABYAAAALAAEAAAAFABgAAAABAAIAAAAFABkAAAALAAEAAAAFABcAAAABAAMAAAAFABoAAAACAAEAAAAHABgAAAABAAEAAAAHABcAAAALAAEAAAAHABkAAAALAAEAAAAHABoAAAABAAEAAAAHABsAAAABAAEAAAAGABsAAAABAAIAAAAIABsAAAABAAEAAAAJABgAAAACAAEAAAADABsAAAABAAEAAAADABwAAAABAAEAAAD0/xIAAAABAAEAAAD0/xMAAAABAAEAAAD0/xwAAAAAAAIAAAAJAAoAAAAAAAQAAAAKAAoAAAADAAQAAAAUAAEAAAADAAQAAAAUAAAAAAADAAMAAAAUAP//AAADAAMAAAAUAP7/AAADAAAAAAASAP7/AAABAAAAAAATAP7/AAACAAAAAADz/xIAAAADAAIAAADz/xMAAAAAAAEAAADz/xQAAAAAAAQAAAD0/xQAAAAFAAMAAAD0/xUAAAAAAAIAAAD0/xYAAAAAAAMAAAD0/xcAAAAAAAIAAAD0/xgAAAAAAAEAAAD0/xkAAAAAAAEAAAD0/xoAAAAAAAEAAAD0/xsAAAAAAAMAAADz/xEAAAABAAAAAAD0/xEAAAABAAAAAAD1/xEAAAAFAAAAAAD2/xEAAAABAAAAAAD3/xEAAAABAAAAAAD4/xEAAAAFAAAAAAD5/xEAAAACAAAAAAD6/xEAAAABAAAAAAD7/xEAAAAGAAAAAAD8/xEAAAABAAAAAAD9/xEAAAADAAAAAAAAABEAAAAAAAAAAAABABEAAAABAAAAAAACABEAAAABAAAAAAADABEAAAABAAAAAAAEABEAAAABAAAAAAAFABEAAAABAAAAAAAGABEAAAAFAAAAAAAHABEAAAAGAAAAAAAIABEAAAAGAAAAAAAJABEAAAABAAAAAAD2/xgAAAADAAMAAAD2/xkAAAADAAEAAAD2/xoAAAABAAEAAAD3/xkAAAABAAAAAAD//xkAAAABAAEAAAD//xoAAAABAAIAAAD0/x0AAAAAAAQAAAD1/x0AAAABAAQAAAD2/x0AAAABAAQAAAD3/x0AAAAFAAQAAAD4/x0AAAABAAQAAAD5/x0AAAAGAAQAAAD6/x0AAAABAAQAAAD7/x0AAAABAAQAAAD8/x0AAAAFAAQAAAD9/x0AAAABAAQAAAD+/x0AAAABAAQAAAD4/xkAAAADAAAAAAD5/xkAAAAAAAAAAAD4/xoAAAAJAAEAAAD5/xsAAAAAAAEAAAD//x0AAAABAAQAAAAAAB0AAAABAAQAAAABAB0AAAABAAQAAAACAB0AAAAGAAQAAAADAB0AAAABAAQAAAAEAB0AAAABAAQAAAAFAB0AAAABAAQAAAAGAB0AAAABAAQAAAAHAB0AAAABAAQAAAAIAB0AAAACAAQAAAAJAB0AAAABAAQAAAAKAB0AAAADAAQAAAAKABwAAAAJAAIAAAAKABsAAAAJAAMAAAAKABoAAAADAAMAAAAKABkAAAAJAAMAAAAKABgAAAAJAAMAAAAKABcAAAAJAAIAAAAKABYAAAAJAAIAAAAKABUAAAAJAAIAAAAKABQAAAAJAAMAAAAKABMAAAAJAAMAAAAKABIAAAAJAAIAAAAKABEAAAADAAAAAAD+/xYAAAAAAAAAAAD+/xEAAAAKAAAAAAD//xEAAAAMAAAAAAA=")
tile_set = ExtResource("1_snsc8")

[node name="DecorationsLayer" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray("AAABAAUAAAAHAAQAAAAGAP//AAAGAAMAAAAGAAMAAAAGAAMAAAAPAAQAAAAGAAIAAAALAPz/AAAGAAIAAAD9////AAAGAAIAAAAGAAQAAAAIAAEAAAADAAQAAAAIAAEAAAAAAAQAAAAIAAEAAAD9/wQAAAAIAAEAAAAGAP7/AAAIAAEAAAADAP7/AAAIAAEAAAAAAP7/AAAIAAEAAAD9//7/AAAIAAEAAAD8/wUAAAAOAAAAAAD9//3/AAAOAAAAAAAKAPr/AAAOAAAAAAAOAAQAAAAIAAEAAAAMAPv/AAAIAAEAAAAOAPn/AAAOAAAAAAARAP//AAAIAAMAAAARAAAAAAAIAAMAAAAAABMAAAAHAAMAAAABABoAAAAIAAEAAAAEABoAAAAIAAEAAAAHABoAAAAIAAEAAAAHABcAAAAIAAEAAAAHABQAAAAIAAEAAAA=")
tile_set = ExtResource("1_snsc8")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.35, 0.35, 0.35, 1)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
editor_only = true
blend_mode = 2

[node name="EnemyHolder" type="Node2D" parent="."]
script = ExtResource("3_778h3")

[node name="Enemy" parent="EnemyHolder" instance=ExtResource("5_liu6m")]
position = Vector2(160, 5)

[node name="Enemy2" parent="EnemyHolder" instance=ExtResource("5_liu6m")]
position = Vector2(194, 86)

[node name="Enemy4" parent="EnemyHolder" instance=ExtResource("5_liu6m")]
position = Vector2(270, 56)

[node name="Enemy5" parent="EnemyHolder" instance=ExtResource("5_liu6m")]
position = Vector2(-59, 1)

[node name="Enemy7" parent="EnemyHolder" instance=ExtResource("5_liu6m")]
position = Vector2(129, -37)

[node name="Enemy8" parent="EnemyHolder" instance=ExtResource("5_liu6m")]
position = Vector2(159, -41)

[node name="Enemy10" parent="EnemyHolder" instance=ExtResource("5_liu6m")]
position = Vector2(256, -102)

[node name="Enemy11" parent="EnemyHolder" instance=ExtResource("5_liu6m")]
position = Vector2(156, -90)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="LevelClear" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchor_left = 0.054
anchor_right = 0.054
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
script = ExtResource("5_efr2d")
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/LevelClear"]
modulate = Color(0, 1, 0.566667, 1)
texture_filter = 1
layout_mode = 1
offset_right = 1280.0
offset_bottom = 65.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_offset_x = 1
theme_override_fonts/normal_font = ExtResource("6_pgdwi")
theme_override_font_sizes/normal_font_size = 35
text = "Level clear"
fit_content = true

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/LevelClear"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.193
offset_top = 69.0
offset_right = 1280.0
offset_bottom = 720.0
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_offset_x = 1
theme_override_fonts/normal_font = ExtResource("6_pgdwi")
theme_override_font_sizes/normal_font_size = 12
text = "proceed to the next floor"

[node name="EnemyCounter" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
metadata/_edit_lock_ = true

[node name="EnemiesLeft" type="RichTextLabel" parent="CanvasLayer/EnemyCounter"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_offset_x = 1
theme_override_fonts/normal_font = ExtResource("6_pgdwi")
theme_override_font_sizes/normal_font_size = 10
text = "enemies left: x"

[node name="NextFloorArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextFloorArea"]
position = Vector2(314.25, 1)
shape = SubResource("RectangleShape2D_akknf")

[node name="NextFloorArea2" type="Area2D" parent="."]
position = Vector2(-329, 296)
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextFloorArea2"]
position = Vector2(312.5, 0.5)
shape = SubResource("RectangleShape2D_pcwft")

[node name="Level2" type="Marker2D" parent="."]
position = Vector2(-184, 296)

[node name="Level3" type="Marker2D" parent="."]
position = Vector2(-184, 296)

[connection signal="next_level" from="." to="CanvasLayer/LevelClear" method="_on_arcade_scene_next_level"]
[connection signal="level_clear" from="EnemyHolder" to="CanvasLayer/LevelClear" method="_on_enemy_holder_level_clear"]
[connection signal="body_entered" from="NextFloorArea" to="." method="_on_next_floor_area_body_entered"]
[connection signal="body_entered" from="NextFloorArea2" to="." method="_on_next_floor_area_2_body_entered"]
